kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: databass-media
  labels:
    app: databass-media
spec:
  selector:
    app: databass-media
  ports:
  - port: 9000
    protocol: TCP
    nodePort: 30062
  type: LoadBalancer
